<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ReviewFragment">

    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Android Review App"
        android:textColor="#7B1FA2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt1"
        android:lineHeight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tt"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt1" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineHeight="30dp"
        android:text="@string/txt2" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Tham gia thực hiện: "
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt4"
        android:lineHeight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt3" />


</RelativeLayout>