<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        tools:context=".fragment_example.ListviewExampleFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/example">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv1"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:text="@string/Lv_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/lv1"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv2"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:text="@string/Lv_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/lv2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv3"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:text="@string/Lv_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/lv3"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>